# openai-assistant-mcp

./: .clinerules  .cursorrules  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.build.yml  docker-compose.dev.yml  llms-install.md  pyproject.toml  run_server.py
.cursor/rules/: architecture.md  core.md  docker.md  environment.md
.cursor/rules/mcp/: debugging.md  introduction.md  lifecycle.md  prompts.md  resources.md  security.md  tools.md  transport.md
docs/: server.md  tools.md
docs/context/: README.md  list_tools.json
docs/context/mcp/: transport.md
docs/mcp-servers/openai-assistant/: README.md
docs/openai-assistant/: 1-objects.txt  2-assistant.txt  3-threads.txt  4-messages.txt  5-runs.txt  6-run-steps.txt  7-streaming.txt  8-overview.txt
scripts/cicd/: deploy.sh  docker-build-push.sh  run-mcpo-no-encoding.sh  run-mcpo.sh
src/: __init__.py  server.py
src/config/: __init__.py  settings.py
src/tools/: __init__.py  models.py
src/tools/assistant/: __init__.py  models.py  tools.py
src/tools/messages/: __init__.py  models.py  tools.py
src/tools/run_steps/: __init__.py  models.py  tools.py
src/tools/runs/: __init__.py  models.py  tools.py
src/tools/threads/: __init__.py  models.py  tools.py
src/utils/: app_context.py  dependencies.py  middleware.py
tests/server/: __init__.py  test_assistant_tools.py  test_message_tools.py  test_run_step_tools.py  test_run_tools.py  test_thread_tools.py
tests/tools/assistant/: __init__.py  test_tools.py
tests/tools/messages/: test_tools.py
tests/tools/run_steps/: test_tools.py
tests/tools/runs/: test_tools.py
tests/tools/threads/: __init__.py  test_tools.py
