[project]
name = "carrot-quest-mcp"
version = "0.1.0"
description = "MCP server for Carrot Quest API integration providing tools for managing apps, conversations, and users. Includes tools for tracking user activity, managing conversations, handling user properties and events, and interacting with various aspects of the Carrot Quest platform."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Oleg Math", email = "dimatroso@gmail.com"}
]
dependencies = [
    "mcp[cli]",
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn>=0.27.1,<1.0.0",
    "pydantic>=2.5.2,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "httpx==0.27.2"
]

[project.optional-dependencies]
dev = [
    # Code Quality
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8==7.1.1",
    "pycodestyle==2.12.1",
    "pyflakes==3.2.0",
    "pre-commit>=3.5.0",

    # Testing
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1,<0.22.0",
    "pytest-cov>=4.1.0",
    "pytest-env>=1.1.1,<1.2.0",
    "pytest-mock>=3.12.0",
    "pytest-order>=1.3.0",

    # Typing
    "mypy>=1.14.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
pythonpath = ["."]
env = [
    "PYTHONPATH=src"
]

[tool.mypy]
python_version = "3.11"
plugins = []
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
follow_imports = "silent"
disallow_any_generics = false
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true
follow_imports = "skip"
